--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,10 +6,11 @@
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[28,)" #mandatory (26 is current forge version)
+loaderVersion="[35,)" #mandatory (26 is current forge version)
 # A URL to refer people to when problems occur with this mod
 issueTrackerURL="https://github.com/xnrand/SimpleIRCBridge" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
+license="All rights reserved"
 [[mods]] #mandatory
 # The modid of the mod
 modId="simpleircbridge" #mandatory
@@ -26,21 +27,21 @@ description='''
 This server-side mod allows you to relay all chat on the server to and from an IRC channel. Its configuration is kept very simple and its functionality is basic.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.examplemod]] #optional
+[[dependencies.simpleircbridge]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[28,)" #mandatory
+    versionRange="[36,)" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
-    side="BOTH"
+    side="SERVER"
 # Here's another dependency
-[[dependencies.examplemod]]
+[[dependencies.simpleircbridge]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.14.4]"
+    versionRange="[1.16.5]"
     ordering="NONE"
-    side="BOTH"
+    side="SERVER"
