--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,19 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.0.0
+mod_version = 1.0.1
 maven_group = net.stonebound.simpleircbridge
 archives_name = simpleircbridge
-enabled_platforms = fabric,forge,quilt
+enabled_platforms = fabric,forge,neoforge,quilt
 
 # Minecraft properties
-minecraft_version = 1.20.1
+minecraft_version = 1.20.4
 
 # Dependencies
-architectury_api_version = 9.2.14
+architectury_api_version = 11.1.17
 fabric_loader_version = 0.15.11
-fabric_api_version = 0.92.2+1.20.1
-forge_version = 1.20.1-47.2.32
-quilt_loader_version = 0.26.0-beta.4
-quilted_fabric_api_version = 7.5.0+0.91.0-1.20.1
+fabric_api_version = 0.97.1+1.20.4
+forge_version = 1.20.4-49.0.50
+neoforge_version = 20.4.234
+quilt_loader_version = 0.26.1-beta.1
+quilted_fabric_api_version = 9.0.0-alpha.8+0.97.0-1.20.4
