--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,16 @@
 pluginManagement {
     repositories {
+        maven { url "https://maven.fabricmc.net/" }
+        maven { url "https://maven.architectury.dev/" }
+        maven { url "https://files.minecraftforge.net/maven/" }
         gradlePluginPortal()
-        maven {
-            name = 'MinecraftForge'
-            url = 'https://maven.minecraftforge.net/'
-        }
     }
 }
 
-plugins {
-    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
-}
+rootProject.name = 'simpleircbridge'
+
+include 'common'
+include 'fabric'
+include 'forge'
+include 'neoforge'
+include 'quilt'
