--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,60 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.0.1
+mod_version = 1.0.3
 maven_group = net.stonebound.simpleircbridge
 archives_name = simpleircbridge
 enabled_platforms = fabric,forge,neoforge,quilt
+mod_description = Simple Irc Bridge
+mod_id = simpleircbridge
+mod_name=Simple IRC Bridge
+mod_license=BSD-2-Clause
+mod_authors=xrand & contributors
+mod_contact=https://stonebound.net
+mod_git=https://github.com/Stonebound/SimpleIRCBridge/
 
-# Minecraft properties
+
+
+#Forge TOML Properties
+forge_loaderversion = [49,)
+forge_loaderrange = [49,)
+forge_forgeside = BOTH
+forge_minecraftrange = [1.20.4,)
+forge_architecturyrange = [11.1.17,)
+forge_architecturyside = BOTH
+
+
+#Neoforge TOML Properties
+neoforge_loaderversion = [2,)
+neoforge_loaderrange = [20.4,)
+neoforge_neoforgeside = BOTH
+neoforge_minecraftrange = [1.20.4,)
+neoforge_architecturyrange = [11.1.17,)
+neoforge_architecturyside = BOTH
+
+
+
+#Quilt & Fabric JSON Properties
+quilt_architectury= >=11.1.17
+quilt_minecraft= >=1.20.4
+quilt_quiltloader = *
+quilt_quiltbase = *
+#yes its cursed
+fabric_fabricloader = >=0.15.11
+fabric_minecraft = ~1.20.4
+fabric_java = >=17
+fabric_architectury = >=11.1.17
+fabric_fabricapi = *
+
+
+
+# Compile Dependencies
 minecraft_version = 1.20.4
-
-# Dependencies
 architectury_api_version = 11.1.17
 fabric_loader_version = 0.15.11
 fabric_api_version = 0.97.1+1.20.4
-forge_version = 1.20.4-49.0.50
-neoforge_version = 20.4.234
+forge_version = 1.20.4-49.1.2
+neoforge_version = 20.4.237
 quilt_loader_version = 0.26.1-beta.1
 quilted_fabric_api_version = 9.0.0-alpha.8+0.97.0-1.20.4
+nightconfig_version=3.6.4
