add sb to archive to save 10 seconds when updating packs

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.parallel=true
 # Mod properties
 mod_version = 1.0.4
 maven_group = net.stonebound.simpleircbridge
-archives_name = simpleircbridge
+archives_name = sbsimpleircbridge
 enabled_platforms = fabric,forge,neoforge,quilt
 mod_description = Simple Irc Bridge
 mod_id = simpleircbridge
