--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,17 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.0.2
+mod_version = 1.1.0
 maven_group = net.stonebound.simpleircbridge
 archives_name = simpleircbridge
-enabled_platforms = fabric,forge,neoforge,quilt
+enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.20.4
+minecraft_version = 1.21.1
 
 # Dependencies
-architectury_api_version = 11.1.17
-fabric_loader_version = 0.15.11
-fabric_api_version = 0.97.1+1.20.4
-forge_version = 1.20.4-49.0.50
-neoforge_version = 20.4.234
-quilt_loader_version = 0.26.1-beta.1
-quilted_fabric_api_version = 9.0.0-alpha.8+0.97.0-1.20.4
-nightconfig_version=3.6.4
+architectury_api_version = 13.0.6
+fabric_loader_version = 0.16.2
+fabric_api_version = 0.102.1+1.21.1
+neoforge_version = 21.1.23
+nightconfig_version=3.8.0
